--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 
 
 .container {
-    width: 80%;
+    width: 70%;
     margin: auto;
 }
 
@@ -29,49 +29,13 @@ body {
     justify-content: space-between;
 }
 
-.imgContainer {
+img {
+    margin: 3rem;
     text-align: center;
-    padding: 1rem;
-}
-
-.imgContainer img {
-    width: 150px;
-}
-
-
-.col-12 {
-    width: auto;
-}
-
-[class^="col-"] {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    background-color: var(--oop-1-card-bg);
-    border: 2px solid black;
-    min-height: 50px;
-    color: var(--oop-1-light);
-    padding: 1rem;
 }
 
 
 
-@media screen and (min-width: 568px) {
-    .col-sm-6 {
-        width: calc((100% - 1px - 1rem) / 2);
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .col-md-4 {
-        width: calc((100% - 6px - 2rem) / 3);
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .col-lg-3 {
-        width: calc((100% - 8px - 3rem) / 4);
-    }
-}
 
 footer {
     background-color: var(--oop-1-header-footer-bg);
@@ -84,11 +48,5 @@ header {
     background-color: var(--oop-1-header-footer-bg);
     color: var(--oop-1-light);
     padding: 2rem;
-    text-align: center;
-}
-
-i {
-    color: cornflowerblue;
-    font-size: 2rem;
     text-align: center;
 }
