--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,13 @@ img {
 }
 
 
-
+nav {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
 
 footer {
     background-color: var(--oop-1-header-footer-bg);
