--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: 2px dashed var(--ms4-head-color);
 
     >.head_username,
     .head_nMedias {
@@ -113,7 +114,7 @@ header {
     background-color: var(--ms4-dark);
     color: var(--ms4-light);
     border: 2px solid var(--ms4-dark);
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 1rem;
     padding: 0.5rem;
 }
